--- a/package.json
+++ b/package.json
@@ -17,5 +17,9 @@
         "react-dom": "^18.2.0",
         "tailwindcss": "^3.2.1",
         "vite": "^4.0.0"
+    },
+    "dependencies": {
+        "react-hot-toast": "^2.4.1",
+        "react-icons": "^5.1.0"
     }
 }
