--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
         "vite": "^4.0.0"
     },
     "dependencies": {
+        "rc-progress": "^4.0.0",
         "react-hot-toast": "^2.4.1",
         "react-icons": "^5.1.0"
     }
