--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     },
     "dependencies": {
         "@material-tailwind/react": "^2.1.9",
+        "date-fns": "^3.6.0",
         "rc-progress": "^4.0.0",
         "react-hot-toast": "^2.4.1",
         "react-icons": "^5.1.0"
