--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
         "date-fns": "^3.6.0",
         "rc-progress": "^4.0.0",
         "react-hot-toast": "^2.4.1",
-        "react-icons": "^5.1.0"
+        "react-icons": "^5.1.0",
+        "sweetalert2": "^11.11.1"
     }
 }
