--- a/package.json
+++ b/package.json
@@ -21,9 +21,12 @@
     "dependencies": {
         "@material-tailwind/react": "^2.1.9",
         "date-fns": "^3.6.0",
+        "jspdf": "^2.5.1",
+        "jspdf-autotable": "^3.8.2",
         "rc-progress": "^4.0.0",
         "react-hot-toast": "^2.4.1",
         "react-icons": "^5.1.0",
-        "sweetalert2": "^11.11.1"
+        "sweetalert2": "^11.11.1",
+        "xlsx": "^0.18.5"
     }
 }
