--- a/package.json
+++ b/package.json
@@ -24,10 +24,12 @@
         "date-fns": "^3.6.0",
         "jspdf": "^2.5.1",
         "jspdf-autotable": "^3.8.2",
+        "leaflet": "^1.9.4",
         "rc-progress": "^4.0.0",
         "react-apexcharts": "^1.4.1",
         "react-hot-toast": "^2.4.1",
         "react-icons": "^5.1.0",
+        "react-leaflet": "^4.2.1",
         "sweetalert2": "^11.11.1",
         "xlsx": "^0.18.5"
     }
